Set overflow to hidden on body to prevent scrolling outside of editor.

--- a/src/main/webapp/workspace/workspace.css
+++ b/src/main/webapp/workspace/workspace.css
@@ -7,6 +7,7 @@ body {
   margin: 0px;
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 #firepad-container {
